2A/Peppa/2023-2sn-peppa/CONTENU/TP01solution/trace_exemple_simple.py.out
  File "trace_exemple_simple.py", line 20
    print(f'fact({x}) =', fact(x))
                       ^
SyntaxError: invalid syntax
